--- a/index.html
+++ b/index.html
@@ -2182,13 +2182,13 @@
 							<div class="tel-area-footer">
 								<div class="code-tel">
 									<p>8 800</p>
-									<span>Москва</span>
+									<span>Регионы</span>
 								</div>
 								<div class="second-tel-block">175-25-71</div>
 							</div>
 							<div class="tel-area-footer">
 								<div class="code-tel">
-									<p>8 800</p>
+									<p>8 495</p>
 									<span>Москва</span>
 								</div>
 								<div class="second-tel-block">175-25-71</div>
@@ -2237,7 +2237,6 @@
 	<!-- инициализация скриптов -->
 
 	<script src="js/scripts.js"></script>
-	<script src="plugins/Maskedinput/jquery.maskedinput.min.js"></script>
 	<script src="plugins/Maskedinput/jquery.maskedinput.min.js"></script>
 	<script src="http://cdn.rawgit.com/RobinHerbots/jquery.inputmask/3.2.7/dist/min/jquery.inputmask.bundle.min.js" type="text/javascript"></script>
 	<script src="http://cdn.rawgit.com/andr-04/inputmask-multi/1.2.0/js/jquery.inputmask-multi.min.js" type="text/javascript"></script>
